# ChangeLog for app-admin/abrt
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/abrt/ChangeLog,v 1.2 2011/12/29 17:09:14 pacho Exp $

  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> abrt-2.0.6.ebuild:
  amd64 stable, bug 393007

*abrt-2.0.6 (16 Nov 2011)

  16 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  +files/abrt-2.0.5-conf, +files/abrt-2.0.5-init, +abrt-2.0.6.ebuild,
  +files/abrt-2.0.6-format-security.patch, +files/abrt-2.0.6-gentoo.patch,
  +files/abrt-2.0.6-glib-2.31.patch, +metadata.xml:
  Add Fedora's automatic crash reporter tool from the gnome overlay.
