@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/Attic/pygobject-2.28.6-r51.ebuild,v 1.4 2011/12/29 17:34:32 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/Attic/pygobject-2.28.6-r51.ebuild,v 1.5 2011/12/31 16:23:58 tetromino Exp $
 
 EAPI="3"
 GCONF_DEBUG="no"
@@ -70,7 +70,7 @@ src_prepare() {
 	epatch "${FILESDIR}/${PN}-2.28.3-disable-failing-tests.patch"
 
 	# disable pyc compiling
-	ln -sfn $(type -P true) py-compile
+	echo -e '#!'$(type -P sh)'\n:' > py-compile
 
 	eautoreconf
 	gnome2_src_prepare
