@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/Attic/pygobject-3.0.3.ebuild,v 1.2 2011/12/30 18:14:18 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/Attic/pygobject-3.0.3.ebuild,v 1.3 2011/12/31 16:23:58 tetromino Exp $
 
 EAPI="4"
 GCONF_DEBUG="no"
@@ -77,7 +77,7 @@ src_prepare() {
 	epatch "${FILESDIR}/${PN}-3.0.3-tests-python3.patch"
 
 	# disable pyc compiling
-	ln -sfn $(type -P true) py-compile
+	echo -e '#!'$(type -P sh)'\n:' > py-compile
 
 	eautoreconf
 	gnome2_src_prepare
