@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libreport
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libreport/ChangeLog,v 1.2 2011/12/29 17:30:32 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libreport/ChangeLog,v 1.3 2011/12/31 16:18:47 tetromino Exp $
+
+  31 Dec 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
+  libreport-2.0.7.ebuild:
+  Fix py-compile idiom for automake-1.11.2 compatibility (bug #396585, thanks
+  to Michał Górny).
 
   29 Dec 2011; Pacho Ramos <pacho@gentoo.org> libreport-2.0.7.ebuild:
   amd64 stable, bug 393007
