@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/pygobject
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.136 2011/12/30 18:14:18 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.137 2011/12/31 16:23:58 tetromino Exp $
+
+  31 Dec 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
+  pygobject-2.26.0-r1.ebuild, pygobject-2.28.6.ebuild,
+  pygobject-2.28.6-r50.ebuild, pygobject-2.28.6-r51.ebuild,
+  pygobject-3.0.1.ebuild, pygobject-3.0.2.ebuild, pygobject-3.0.3.ebuild:
+  Fix py-compile idiom for automake-1.11.2 compatibility (bug #396585, thanks
+  to Michał Górny).
 
   30 Dec 2011; Michael Sterrett <mr_bones_@gentoo.org> pygobject-3.0.3.ebuild:
   whitespace
