@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/abrt
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/abrt/ChangeLog,v 1.2 2011/12/29 17:09:14 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/abrt/ChangeLog,v 1.3 2011/12/31 16:20:30 tetromino Exp $
+
+  31 Dec 2011; Alexandre Rostovtsev <tetromino@gentoo.org> abrt-2.0.6.ebuild:
+  Fix py-compile idiom for automake-1.11.2 compatibility (bug #396585, thanks
+  to Michał Górny).
 
   29 Dec 2011; Pacho Ramos <pacho@gentoo.org> abrt-2.0.6.ebuild:
   amd64 stable, bug 393007
